fix background video placement on small screens

--- a/src/ui/components/PageResources/stylesheet.css
+++ b/src/ui/components/PageResources/stylesheet.css
@@ -25,7 +25,6 @@
   .video {
     width: auto;
     height: auto;
-    transform: translateX(-50%);
   }
 
   .video-header {
